--- a/als-server/js/node-package/package.json
+++ b/als-server/js/node-package/package.json
@@ -15,8 +15,9 @@
     "build:dist": "webpack --config ./webpack.config.js"
   },
   "dependencies": {
+    "@aml-org/amf-custom-validator": "0.1.0-SNAPSHOT.15",
     "ajv": "6.5.2",
-    "@aml-org/amf-custom-validator": "0.1.0-SNAPSHOT.10",
+    "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
