--- a/als-actions/shared/src/test/resources/actions/hover/oas30-full-result.yaml
+++ b/als-actions/shared/src/test/resources/actions/hover/oas30-full-result.yaml
@@ -604,7 +604,7 @@ hovers:
   (161,10):
     - Defines a data type
   (162,11):
-    - The most generic kind of creative work, including books, movies, photographs, software programs, etc.
+    - Defines a data type
   (162,17):
     - Defines a data type
   (163,8):
