--- a/als-server/js/src/test/resources/custom-validation/byDirectory/profile3/expected/negative.yaml
+++ b/als-server/js/src/test/resources/custom-validation/byDirectory/profile3/expected/negative.yaml
@@ -2,25 +2,40 @@ uri: file://als-server/js/src/test/resources/custom-validation/byDirectory/profi
 diagnostics:
   -
     message: Endpoints must have a POST method
-    range: Range(common.Position[L:4,C:0],common.Position[L:21,C:0])
+    range: Range(common.Position[L:13,C:2],common.Position[L:21,C:0])
     severity: Error
+    code: profile.yaml#validation1
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected ["put","patch"] but got actual (actual=get) at apiContract.method
+        location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:13,C:2],common.Position[L:21,C:0]))
+      -
+        message: error in nested nodes under apiContract.supportedOperation
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:4,C:0],common.Position[L:21,C:0]))
   -
     message: Endpoints must have a POST method
-    range: Range(common.Position[L:21,C:0],common.Position[L:39,C:0])
+    range: Range(common.Position[L:30,C:2],common.Position[L:39,C:0])
     severity: Error
+    code: profile.yaml#validation1
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected ["put","patch"] but got actual (actual=get) at apiContract.method
+        location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:30,C:2],common.Position[L:39,C:0]))
+      -
+        message: error in nested nodes under apiContract.supportedOperation
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:21,C:0],common.Position[L:39,C:0]))
   -
     message: Endpoints must have a POST method
-    range: Range(common.Position[L:39,C:0],common.Position[L:55,C:12])
+    range: Range(common.Position[L:48,C:2],common.Position[L:55,C:12])
     severity: Error
+    code: profile.yaml#validation1
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected ["put","patch"] but got actual (actual=post) at apiContract.method
+        location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:48,C:2],common.Position[L:55,C:12]))
+      -
+        message: Error expected ["put","patch"] but got actual (actual=get) at apiContract.method
+        location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:40,C:2],common.Position[L:48,C:0]))
+      -
+        message: error in nested nodes under apiContract.supportedOperation
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile3/negative.data,Range(common.Position[L:39,C:0],common.Position[L:55,C:12]))
