--- a/als-server/js/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/expected/negative.yaml
+++ b/als-server/js/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/expected/negative.yaml
@@ -4,9 +4,10 @@ diagnostics:
     message: Scalars in parameters must have minLength defined
     range: Range(common.Position[L:7,C:6],common.Position[L:8,C:0])
     severity: Error
+    code: profile.yaml#scalar-parameters
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
   -
     message: "Duplicate key : 'description'"
@@ -18,7 +19,8 @@ diagnostics:
     message: Scalars in parameters must have minLength defined
     range: Range(common.Position[L:19,C:6],common.Position[L:19,C:8])
     severity: Error
+    code: profile.yaml#scalar-parameters
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/negative.data,Range(common.Position[L:19,C:6],common.Position[L:19,C:8]))
