--- a/als-server/js/src/test/resources/custom-validation/byDirectory/profile1/expected/negative.yaml
+++ b/als-server/js/src/test/resources/custom-validation/byDirectory/profile1/expected/negative.yaml
@@ -4,15 +4,17 @@ diagnostics:
     message: Scalars in parameters must have minLength defined
     range: Range(common.Position[L:7,C:6],common.Position[L:8,C:0])
     severity: Error
+    code: profile.yaml#scalar-parameters
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile1/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
   -
     message: Scalars in parameters must have minLength defined
     range: Range(common.Position[L:17,C:6],common.Position[L:17,C:8])
     severity: Error
+    code: profile.yaml#scalar-parameters
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile1/negative.data,Range(common.Position[L:17,C:6],common.Position[L:17,C:8]))
