--- a/als-server/js/src/test/resources/custom-validation/byDirectory/profile2/expected/negative.yaml
+++ b/als-server/js/src/test/resources/custom-validation/byDirectory/profile2/expected/negative.yaml
@@ -4,7 +4,14 @@ diagnostics:
     message: Scalars in parameters must have minLength defined
     range: Range(common.Position[L:7,C:6],common.Position[L:8,C:0])
     severity: Error
+    code: profile.yaml#scalar-parameters
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shacl.minLength
+        location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile2/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
+      -
+        message: error in nested nodes under shapes.schema
+        location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile2/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
+      -
+        message: error in nested nodes under apiContract.parameter
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/profile2/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
