--- a/als-server/js/src/test/resources/custom-validation/byDirectory/severities/expected/negative.yaml
+++ b/als-server/js/src/test/resources/custom-validation/byDirectory/severities/expected/negative.yaml
@@ -4,47 +4,53 @@ diagnostics:
     message: Info
     range: Range(common.Position[L:7,C:6],common.Position[L:8,C:0])
     severity: Information
+    code: profile.yaml#scalar-parameters-3
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
-        location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
-  -
-    message: Warning
-    range: Range(common.Position[L:7,C:6],common.Position[L:8,C:0])
-    severity: Warning
-    relatedInformation:
-      -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
   -
     message: Violation
     range: Range(common.Position[L:7,C:6],common.Position[L:8,C:0])
     severity: Error
+    code: profile.yaml#scalar-parameters-1
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
+        location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
+  -
+    message: Warning
+    range: Range(common.Position[L:7,C:6],common.Position[L:8,C:0])
+    severity: Warning
+    code: profile.yaml#scalar-parameters-2
+    relatedInformation:
+      -
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:7,C:6],common.Position[L:8,C:0]))
   -
     message: Info
     range: Range(common.Position[L:17,C:6],common.Position[L:17,C:8])
     severity: Information
+    code: profile.yaml#scalar-parameters-3
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:17,C:6],common.Position[L:17,C:8]))
   -
     message: Violation
     range: Range(common.Position[L:17,C:6],common.Position[L:17,C:8])
     severity: Error
+    code: profile.yaml#scalar-parameters-1
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:17,C:6],common.Position[L:17,C:8]))
   -
     message: Warning
     range: Range(common.Position[L:17,C:6],common.Position[L:17,C:8])
     severity: Warning
+    code: profile.yaml#scalar-parameters-2
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
         location: Location(file://als-server/js/src/test/resources/custom-validation/byDirectory/severities/negative.data,Range(common.Position[L:17,C:6],common.Position[L:17,C:8]))
