--- a/als-server/js/src/test/resources/custom-validation/simple/expected/simple.yaml
+++ b/als-server/js/src/test/resources/custom-validation/simple/expected/simple.yaml
@@ -4,7 +4,11 @@ diagnostics:
     message: Scalars in parameters must have minLength defined
     range: Range(common.Position[L:5,C:6],common.Position[L:6,C:19])
     severity: Error
+    code: profile.yaml#validation1
     relatedInformation:
       -
-        message: Unknown location for error. Could not retrieve effective location
+        message: Error expected 1 >= actual (actual=0) at shacl.minLength
+        location: Location(file://als-server/js/src/test/resources/custom-validation/simple/api.raml,Range(common.Position[L:5,C:6],common.Position[L:6,C:19]))
+      -
+        message: error in nested nodes under apiContract.parameter / shapes.schema
         location: Location(file://als-server/js/src/test/resources/custom-validation/simple/api.raml,Range(common.Position[L:5,C:6],common.Position[L:6,C:19]))
