ALS-1492 Fixing hover issue with alias terms

--- a/als-actions/shared/src/test/resources/actions/hover/raml10-full-result.yaml
+++ b/als-actions/shared/src/test/resources/actions/hover/raml10-full-result.yaml
@@ -12,7 +12,7 @@ hovers:
   (4,5):
     - Defines a data type
   (5,3):
-    - Top level element describing a HTTP API
+    - Imported external libraries for use within the API
   (5,13):
     - Defines a data type
   (6,3):
