--- a/als-node-client/node-package/package.json
+++ b/als-node-client/node-package/package.json
@@ -3,6 +3,7 @@
   "version": "3.3.0-SNAPSHOT",
   "description": "ALS Node Client",
   "main": "./dist/als-node-client.min.js",
+  "types": "typescript/als-server.d.ts",
   "author": "ALS team",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mulesoft/als",
@@ -14,7 +15,7 @@
     "als": "./dist/als-node-client.min.js"
   },
   "dependencies": {
-    "@aml-org/amf-custom-validator": "^0.1.0-SNAPSHOT.16",
+    "@aml-org/amf-custom-validator": "0.1.0-SNAPSHOT.16",
     "ajv": "6.5.2",
     "vscode-jsonrpc": "6.0.0",
     "vscode-languageserver-protocol": "3.16.0"
