--- a/als-server/js/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/expected/negative.yaml
+++ b/als-server/js/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/expected/negative.yaml
@@ -4,7 +4,7 @@ diagnostics:
     message: Scalars in parameters must have minLength defined
     range: Range(common.Position[L:7,C:6],common.Position[L:8,C:0])
     severity: Error
-    code: profile.yaml#scalar-parameters
+    code: file://als-server/js/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/profile.yaml#/encodes/validations/scalar-parameters
     relatedInformation:
       -
         message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
@@ -19,7 +19,7 @@ diagnostics:
     message: Scalars in parameters must have minLength defined
     range: Range(common.Position[L:19,C:6],common.Position[L:19,C:8])
     severity: Error
-    code: profile.yaml#scalar-parameters
+    code: file://als-server/js/src/test/resources/custom-validation/byDirectory/preserve-syntax-error/profile.yaml#/encodes/validations/scalar-parameters
     relatedInformation:
       -
         message: Error expected 1 >= actual (actual=0) at shapes.schema / shacl.minLength
