--- a/als-server/js/src/test/resources/custom-validation/byDirectory/trace-composed/expected/negative.yaml
+++ b/als-server/js/src/test/resources/custom-validation/byDirectory/trace-composed/expected/negative.yaml
@@ -5,5 +5,5 @@ diagnostics:
       Only get with 200 and post operations are allowed
     range: Range(common.Position[L:4,C:2],common.Position[L:8,C:0])
     severity: Error
-    code: profile.yaml#trace-composed
+    code: file://als-server/js/src/test/resources/custom-validation/byDirectory/trace-composed/profile.yaml#/encodes/validations/trace-composed
     relatedInformation: []
