--- a/als-server/js/src/test/resources/custom-validation/byDirectory/profile8/expected/negative.yaml
+++ b/als-server/js/src/test/resources/custom-validation/byDirectory/profile8/expected/negative.yaml
@@ -10,7 +10,7 @@ diagnostics:
     message: GET operations must have 2xx, 4xx and 5xx status codes but no 201
     range: Range(common.Position[L:2,C:0],common.Position[L:5,C:10])
     severity: Error
-    code: profile.yaml#simple-rego
+    code: file://als-server/js/src/test/resources/custom-validation/byDirectory/profile8/profile.yaml#/encodes/validations/simple-rego
     relatedInformation:
       -
         message: "Error at "
