--- a/als-server/js/src/test/resources/custom-validation/byDirectory/trace-and/expected/negative.yaml
+++ b/als-server/js/src/test/resources/custom-validation/byDirectory/trace-and/expected/negative.yaml
@@ -4,7 +4,7 @@ diagnostics:
     message: Only get oprations allowed and they should have 200 message
     range: Range(common.Position[L:7,C:6],common.Position[L:8,C:0])
     severity: Error
-    code: profile.yaml#trace-and
+    code: file://als-server/js/src/test/resources/custom-validation/byDirectory/trace-and/profile.yaml#/encodes/validations/trace-and
     relatedInformation:
       -
         message: Error "201" unexpected at apiContract.statusCode
