HF adopt 4.0.4-4 from AMF

--- a/als-suggestions/js/node-package/package.json
+++ b/als-suggestions/js/node-package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mulesoft/als-suggestions",
-  "version": "2.1.2-RC.1",
+  "version": "2.2.4-1",
   "description": "Standalone als suggestions",
   "main": "lib/als-suggestions.js",
   "types": "typescript/als-suggestions.d.ts",
