--- a/als-server/js/package.json
+++ b/als-server/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "als-server-js",
-  "version": "2.0.5",
+  "version": "2.2.4-1",
   "description": "ALS Server Library",
   "main": "als-server.js",
   "author": "als team",
