Index dialect globally tests

--- a/als-server/shared/src/test/resources/config-provider/ws1/dialect.yaml
+++ b/als-server/shared/src/test/resources/config-provider/ws1/dialect.yaml
@@ -3,6 +3,9 @@ dialect: Test
 version: 2
 external:
   myExternal: http://voc.com/#
+documents:
+  root:
+    encodes: A
 nodeMappings:
   A:
     classTerm: myExternal.ExternalClass
